Updated Styling and added course work

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <h2>SKILLS</h2>
                 </div>
                 <div class="leftwinopts" id="leftwinexper">
-                    <h2>EXPERIENCES / EDUCATION</h2>
+                    <h2>EXPERIENCES & EDUCATION</h2>
                 </div>
                 <div class="leftwinopts" id="leftwinaward">
                     <h2>AWARDS / CERTIFICATIONS</h2>
@@ -163,7 +163,7 @@
                             <i class="fas fa-briefcase"></i>
                         </div>
                         <div class="navtitle darkmodefont">
-                            <p>Experience/</p>
+                            <p>Experience &</p>
                             <p>Education</p>
                         </div>
                     </div>
@@ -377,24 +377,28 @@
                 </div>
                 <div class="aboutcontent  darkmodefont">
                     <div class="abouttxt">
-                        <p><i class="far fa-dot-circle inthemef"></i> &nbsp; Passionate Data Scientist pursuing a
-                            Master's degree in Data Science with expertise in advanced data analysis, machine learning,
-                            and software development.</p>
-                        <p><i class="far fa-dot-circle inthemef"></i> &nbsp; Proficient in Python (Pandas, NumPy,
-                            Scikit-learn, TensorFlow, PyTorch) and SQL, with hands-on experience in designing predictive
-                            models and scalable data pipelines.</p>
-                        <p><i class="far fa-dot-circle inthemef"></i> &nbsp; Skilled in machine learning (supervised,
-                            unsupervised, deep learning, NLP, time series), statistical analysis, and data visualization
-                            using Tableau, Power BI, and Matplotlib.</p>
-                        <p><i class="far fa-dot-circle inthemef"></i> &nbsp; Experienced in cloud platforms (AWS, Azure,
-                            Google Cloud) for deploying machine learning models and scalable solutions.</p>
-                        <p><i class="far fa-dot-circle inthemef"></i> &nbsp; Knowledgeable in data engineering (ETL
-                            pipelines, big data tools like Spark and Hadoop) and DevOps tools like Docker and Kubernetes
-                            for model deployment.</p>
-                        <p><i class="far fa-dot-circle inthemef"></i>&nbsp; Highly motivated and collaborative, with a
-                            proven ability to deliver impactful, data-driven solutions to solve real-world problems.</p>
-
-                    </div>
+              <p>
+                <i class="far fa-dot-circle inthemef"></i> &nbsp; I'm a
+                passionate Data Scientist currently pursuing my Master's in Data
+                Science at SUNY Buffalo, with a strong foundation in machine
+                learning, data engineering, and cloud-based deployment. With
+                hands-on experience as a Lead Data Analyst at Shadowfax and a
+                Software Engineer Intern at Frugal Testing, I specialize in
+                delivering scalable, data-driven solutions.
+              </p>
+              <p>
+                <i class="far fa-dot-circle inthemef"></i> &nbsp; <strong>I bring expertise in:</strong>
+                    <ul style="margin-left: 20px; padding-left: 20px; list-style-type: disc;">
+                        <li><strong>Predictive modeling and ML:</strong> Proficient in Python (Scikit-learn, TensorFlow, PyTorch), SQL, and tools like LightGBM, with projects spanning healthcare and financial domains.</li>
+                        <li><strong>Cloud-native ML deployment:</strong> Skilled in using AWS, GCP, and Docker to deploy real-time data pipelines and Streamlit dashboards.</li>
+                        <li><strong>Big Data & DevOps:</strong> Experienced with Apache Spark, Hadoop, and container orchestration using Kubernetes for scalable analytics.</li>
+                        <li><strong>Visualization & Communication:</strong> Adept in Tableau, Power BI, and Looker Studio to translate complex findings into clear business insights.</li>
+                    </ul>
+                </p>
+                <p>
+                   <i class="far fa-dot-circle inthemef"></i> &nbsp; With a 98% accuracy milestone in database cleaning and a 60% boost in regional productivity through manpower analytics, I aim to combine technical precision with impactful results.
+                </p>
+            </div>
                 </div>
             </section>
             <section class="projects" id="projects">
@@ -1311,7 +1315,7 @@
             </section>
             <section class="exper" id="exper">
                 <div class="secheading inthemeb">
-                    <p>EXPERIENCE / EDUCATION</p>
+                    <p>EXPERIENCE & EDUCATION</p>
                 </div>
                 <div class="expercontainer   darkmodefont">
                     <div class="experallcards">
@@ -1338,16 +1342,28 @@
                                     <em>
                                         <ul>
                                             <li>
-                                                <p>Pursuing Masters in Data Science at State University of Newyork at
-                                                    Buffalo</p>
+                                                <p>Pursuing Master's in Data Science</p>
                                             </li>
+                                            <li>
+                                                <p>Relevant Coursework:</p>
+                                                <div class="course-tags">
+                                                <span>Machine Learning</span>
+                                                <span>Database Systems</span>
+                                                <span>Statistical Learning</span>
+                                                <span>Big Data</span>
+                                                <span>Advanced Probability</span>
+                                                <span>Numerical Math</span>
+                                                </div>
+
+                                            </li>
+
                                         </ul>
                                     </em>
                                 </div>
                             </div>
                             <hr>
                             <div class="expercardfooter darkmodebg darkmodefont">
-                                <p>Aug'24 - Dec'25 | Buffalo, USA</p>
+                                <p>Aug'24 - Dec'25 | Buffalo, United States</p>
                             </div>
                         </div>
 
@@ -1374,20 +1390,9 @@
                                         Optimization.</p>
                                     <em>
                                         <ul>
-                                            <li>
-                                                <p>Attained a remarkable 98% accuracy in cleaning the entire employee
-                                                    database, a first in the company's 9-year history.</p>
-                                            </li>
-                                            <li>
-                                                <p>Leveraged analytical insights to optimize manpower allocation in the
-                                                    East region, boosting productivity by 60%.
-                                                </p>
-                                            </li>
-                                            <li>
-                                                <p>Delivered actionable insights by conducting in-depth hub performance
-                                                    analysis, enhancing efficiency across key operations
-                                                </p>
-                                            </li>
+                                            <li>Achieved <strong>98% accuracy</strong> in employee database cleaning — a first in company history.</li>
+                                            <li>Boosted regional productivity by <strong>60%</strong> via manpower allocation strategies backed by analytics.</li>
+                                            <li>Delivered actionable insights through hub performance dashboards that improved operational efficiency.</li> 
                                         </ul>
                                     </em>
                                 </div>
@@ -1419,23 +1424,9 @@
                                         and <b>NPCI</b> Projects.</p>
                                     <em>
                                         <ul>
-                                            <li>
-                                                <p>Built and implemented automation frameworks for 4 diverse projects,
-                                                    significantly reducing manual testing and increasing efficiency by
-                                                    30%.</p>
-                                            </li>
-                                            <li>
-                                                <p>Played a key role in developing the Central Bank Digital Currency
-                                                    (CBDC) product in collaboration with NPCI, successfully delivering
-                                                    and publishing it globally.
-                                                </p>
-                                            </li>
-                                            <li>
-                                                <p>Enhanced testing processes and optimized methodologies through data
-                                                    analysis, actively contributing to cross-functional teams for
-                                                    continuous improvement.
-                                                </p>
-                                            </li>
+                                            <li>Built automation frameworks for 4 enterprise projects, reducing manual QA efforts by 30%.</li>
+                                            <li>Collaborated with NPCI on the CBDC platform; contributed to deployment and global publication.</li>
+                                            <li>Streamlined test pipelines using data analysis and performance monitoring tools.</li>
                                         </ul>
                                     </em>
                                 </div>
@@ -1540,8 +1531,7 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        I have been certified by Microsoft and LinkedIn Learning for completing the
-                                        course.
+                                        Completed with certification via Microsoft & LinkedIn Learning.
                                     </li>
                                 </ul>
                             </div>
@@ -1556,8 +1546,7 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        I have been certified by Scaler Academy for completing the
-                                        course.
+                                        Earned certification in Python and SQL for Data Science through Scaler Academy.
                                     </li>
                                 </ul>
                             </div>
@@ -1574,8 +1563,7 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        I have been certified by Microsoft and LinkedIn Learning for completing the
-                                        course.
+                                        Completed the data analysis track with certification from Microsoft and LinkedIn.
                                     </li>
                                 </ul>
                             </div>
@@ -1590,7 +1578,7 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        I earned a badge for solving top 50 SQL interview problems.
+                                        Earned a badge for solving the top 50 SQL interview challenges on LeetCode.
                                     </li>
                                 </ul>
                             </div>
@@ -1605,8 +1593,7 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        I have earned the certificate for clearing the advanced SQL assessment organised
-                                        by HackerRank.
+                                        Cleared the Advanced SQL assessment and received HackerRank recognition.
                                     </li>
                                 </ul>
                             </div>
@@ -1620,8 +1607,7 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        I have been certified by MongoDB University for completion of the M001 Mongo DB
-                                        course.
+                                       Completed the M001 course and received certification from MongoDB University.
                                     </li>
                                 </ul>
                             </div>
@@ -1636,7 +1622,7 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        I have been certified by GFG for DSA Self paced course completion.
+                                        Successfully completed and certified by GeeksforGeeks' for the DSA self-paced program.
                                     </li>
                                 </ul>
                             </div>
@@ -1650,11 +1636,7 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        SnackDown is India's global programming event that invites coders from all over
-                                        the world.
-                                    </li>
-                                    <li>
-                                        I had qualified for the qualification and Round-1A rounds.
+                                        Qualified for the CodeChef SnackDown Round-1A in a global programming event.
                                     </li>
                                 </ul>
                             </div>
@@ -1668,8 +1650,7 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        I was part of an exclusive group of 150+ students from all over the country. I
-                                        earned my entry through the Hackathon conducted by Publicis Sapient.
+                                        Finalist among 150+ students in a national hackathon by Publicis Sapient.
                                     </li>
                                 </ul>
                             </div>
@@ -1684,7 +1665,7 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        I have completed all three courses in this specialization.
+                                        Completed a 3-course specialization in Big Data SQL with hands-on projects.
                                         <ul class="smalltext">
                                             <li>Course 1: Foundations for Big Data Analysis with SQL</li>
                                             <li>Course 2: Analyzing Big Data with SQL</li>
@@ -1703,8 +1684,7 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        Had hands-on experience with programming concepts through interactive exercises
-                                        and real-world examples.
+                                        Gained hands-on experience in Python programming via Google's interactive course.
                                     </li>
                                 </ul>
                             </div>
@@ -1718,8 +1698,7 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        After three months of consistent coding, I was ranked as the top 63rd coder in
-                                        the world.
+                                        Ranked in the top 63 worldwide on HackerEarth after 3 months of consistent coding.
                                     </li>
                                 </ul>
                             </div>
@@ -1735,8 +1714,7 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        I have earned by clearing the problem solving assessment organised by
-                                        HackerRank.
+                                        Earned HackerRank’s certification by completing the problem-solving challenge.
                                     </li>
                                 </ul>
                             </div>
@@ -1762,8 +1740,8 @@
                             <div class="contactoptdet inthemef" onclick="pageOpen('mail')">
                                 <p>shashankmankala.5@gmail.com</p>
                             </div>
-                            <p>Hyderabad, Telangana, India</p>
-                            <p>Contact no. +9170xxxxxxxx</p>
+                            <p>New York, United States</p>
+                            <p>Contact no. +17165471045</p>
                         </div>
                         <div class="contactfooterdiv">
                             <div class="contactlinks">
@@ -1912,7 +1890,7 @@
 
 
                     <div class="contactfooter">
-                        <p>&copy; 2023-2024 | All rights reserved with Copyright & Trademarks | Made by Shashank</p>
+                        <p>&copy; 2025 | All rights reserved with Copyright & Trademarks | Made by Shashank</p>
                     </div>
                 </div>
             </section>
