Added Crypto Project

--- a/index.html
+++ b/index.html
@@ -407,6 +407,54 @@
                 </div>
                 <div class="prcontainer  darkmodefont">
                     <div class="prcontent">
+                        <!-- Crypto Prediction -->
+                        <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn7">
+                            <div class="prsonoff" id="prsonoffn7">
+                                <div class="prgif" id="prgifn7">
+                                    <img src="img/cryptodashboard.png" alt="cryptodashboard.png" class="prgifgif"
+                                        id="prgifgifn7">
+                                </div>
+                                <div class="prtitle inthemef" id="prtitlen7">
+                                    <p id="prpn7">Real-Time Crypto Trading Dashboard</p>
+                                    <div class="proptions" id="proptionn7">
+                                        <i class="fas fa-ellipsis-v"></i>
+                                    </div>
+                                </div>
+                                <div class="prdisc">
+                                    <p>Designed and deployed a real-time, Docker-based crypto trading dashboard with live data ingestion, ML-driven predictions, and a Streamlit visualization interface.</p>
+                                </div>
+                            </div>
+                            <div class="prshidonoff darkmodebg darkmodefont" id="prshidonoffn7">
+                                <div class="prdefhead">
+                                    <p>Accomplishments</p>
+                                    <i class="fas fa-times" id="closeoptn7"></i>
+                                </div>
+                                <div class="prdefbody">
+                                    <ul>
+                                        <li>
+                                            <p>Built a modular, containerized crypto trading system using Docker Compose, enabling real-time data ingestion, processing, and ML inference across isolated services.</p>
+                                        </li>
+                                        <li>
+                                            <p>Implemented a live candle aggregation and prediction pipeline, generating OHLCV data from streaming trades and applying machine learning models to make actionable trade signals.</p>
+                                        </li>
+                                        <li>
+                                            <p>Deployed an interactive Streamlit dashboard on GCP, displaying live market data, model predictions, and system status for full observability and control.</p>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <hr>
+                                <div class="prdeffooter">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow"
+                                        onclick="viewproject('REPO_CRYP')" title="View GitHub repository">
+                                        <i class="fab fa-github"></i>
+                                    </div>
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow"
+                                        onclick="viewproject('ART_CRYP')" title="View article on Medium.com">
+                                        <i class="fab fa-medium"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <!-- Diabetes prediction -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn6">
                             <div class="prsonoff" id="prsonoffn6">
