Added project years

--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@
                     <div class="prcontent">
                         <!-- Crypto Prediction -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn7">
+                            <div class="pryear inthemeb" id="pryearn7">2025</div>
                             <div class="prsonoff" id="prsonoffn7">
                                 <div class="prgif" id="prgifn7">
                                     <img src="img/cryptodashboard.png" alt="cryptodashboard.png" class="prgifgif"
@@ -457,6 +458,7 @@
                         </div>
                         <!-- Diabetes prediction -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn6">
+                            <div class="pryear inthemeb" id="pryearn6">2024</div>
                             <div class="prsonoff" id="prsonoffn6">
                                 <div class="prgif" id="prgifn6">
                                     <img src="img/diabpredict.webp" alt="diabetesprediction.png" class="prgifgif"
@@ -510,6 +512,7 @@
                         </div>
                         <!-- Heart Attack prediction -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn5">
+                            <div class="pryear inthemeb" id="pryearn5">2024</div>
                             <div class="prsonoff" id="prsonoffn5">
                                 <div class="prgif" id="prgifn5">
                                     <img src="img/heartpredict.png" alt="heartpredict.png" class="prgifgif"
@@ -573,6 +576,7 @@
                         </div>
                         <!-- pr Chat bot application -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn4">
+                            <div class="pryear inthemeb" id="pryearn4">2023</div>
                             <div class="prsonoff" id="prsonoffn4">
                                 <div class="prgif" id="prgifn4">
                                     <img src="img/chatbot.png" alt="chatbot.png" class="prgifgif" id="prgifgifn4">
@@ -635,6 +639,7 @@
 
                         <!-- pr Road accidents dashboard -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn3">
+                            <div class="pryear inthemeb" id="pryearn3">2023</div>
                             <div class="prsonoff" id="prsonoffn3">
                                 <div class="prgif" id="prgifn3">
                                     <img src="img/road-accidents-dashboard.png" alt="road-accidents-dashboard.png"
@@ -688,6 +693,7 @@
 
                         <!-- pr easychat website -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn2">
+                            <div class="pryear inthemeb" id="pryearn2">2022</div>
                             <div class="prsonoff" id="prsonoffn2">
                                 <div class="prgif" id="prgifn2">
                                     <img src="img/easychat.webp" alt="" class="prgifgif" id="prgifgifn2">
@@ -732,6 +738,7 @@
 
                         <!-- pr portfolio  -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn1">
+                            <div class="pryear inthemeb" id="pryearn1">2022</div>
                             <div class="prsonoff" id="prsonoffn1">
                                 <div class="prgif" id="prgifn1">
                                     <img src="img/p1.webp" alt="" class="prgifgif" id="prgifgifn1">
@@ -777,6 +784,7 @@
                         </div>
                         <!-- pr excel project -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn0">
+                            <div class="pryear inthemeb" id="pryearn0">2022</div>
                             <div class="prsonoff" id="prsonoffn0">
                                 <div class="prgif" id="prgifn0">
                                     <img src="img/ps1.webp" alt="" class="prgifgif" id="prgifgifn0">
@@ -820,6 +828,7 @@
                         </div>
                         <!-- ============= -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prs1">
+                            <div class="pryear inthemeb" id="pryear1">2021</div>
                             <div class="prsonoff" id="prsonoff1">
                                 <div class="prgif" id="prgif1">
                                     <img src="img/f1.png" alt="" class="prgifgif" id="prgifgif1">
@@ -860,6 +869,7 @@
                             </div>
                         </div>
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prs2">
+                            <div class="pryear inthemeb" id="pryear2">2021</div>
                             <div class="prsonoff" id="prsonoff2">
                                 <div class="prgif" id="prgif2">
                                     <img src="img/mp1.webp" alt="" class="prgifgif" id="prgifgif2">
@@ -904,6 +914,7 @@
                             </div>
                         </div>
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prs3">
+                            <div class="pryear inthemeb" id="pryear3">2021</div>
                             <div class="prsonoff" id="prsonoff3">
                                 <div class="prgif" id="prgif3">
                                     <img src="img/c1.png" alt="" class="prgifgif" id="prgifgif3">
@@ -989,6 +1000,7 @@
                             </div>
                         </div> -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prs5">
+                            <div class="pryear inthemeb" id="pryear5">2021</div>
                             <div class="prsonoff" id="prsonoff5">
                                 <div class="prgif" id="prgif5">
                                     <img src="img/t1.webp" alt="" class="prgifgif" id="prgifgif5">
@@ -1033,6 +1045,7 @@
                             </div>
                         </div>
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prs6">
+                            <div class="pryear inthemeb" id="pryear6">2021</div>
                             <div class="prsonoff" id="prsonoff6">
                                 <div class="prgif" id="prgif6">
                                     <img src="img/employeeManag.png" alt="" class="prgifgif" id="prgifgif6">
