--- a/index.html
+++ b/index.html
@@ -2,51 +2,67 @@
 <html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property='og:title' content='Shashank Mankala Portfolio' />
-    <meta property='og:image'
-        content='https://img.freepik.com/vektoren-premium/portfolio-wort-mit-bleistift-statt-buchstabe-i-kunst-und-designgalerie-konzept-vektorkonzeptionelles-kreatives-logo-oder-poster-mit-spezieller-schriftart_570429-3743.jpg?w=2000' />
-    <meta property='og:description'
-        content='My portfolio is a collection and reflection of my experiences to get a clearer picture of my growth. The purpose of my portfolio is to track my learning and development throughout my undergraduate years.' />
-    <meta property='og:url' content='https://shashank-mankala1.github.io/portfolio/' />
-    <meta property='og:image:width' content='1200' />
-    <meta property='og:image:height' content='627' />
-    <meta property="og:type" content='website' />
 
-
-
-    <meta name="description"
-        content="My portfolio is a collection and reflection of my experiences to get a clearer picture of my growth. The purpose of my portfolio is to track my learning and development throughout my undergraduate years.">
+    <!-- Primary Meta Tags -->
+    <title>Shashank Mankala | Data Scientist & AI Developer</title>
+    <meta name="title" content="Shashank Mankala | Data Scientist & AI Developer">
+    <meta name="description" content="Portfolio of Shashank Mankala, showcasing projects in AI, Machine Learning, LangChain, LLMs, and more. Discover work in real-world applications and open-source contributions.">
+    <meta name="keywords" content="Shashank Mankala, Data Scientist, AI Developer, Machine Learning, LangChain, Python, LLM, Portfolio, Projects, Open Source, GitHub, Streamlit, Cloud">
     <meta name="author" content="Shashank Mankala">
-    <meta name="keywords" content="HTML, CSS, Javascript, JS, Shashank Mankala, portfolio, website">
+    <meta name="robots" content="index, follow">
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://shashank-mankala1.github.io/portfolio/">
+    <meta property="og:title" content="Shashank Mankala | Data Scientist Portfolio">
+    <meta property="og:description" content="Explore Shashank's portfolio featuring cutting-edge projects in AI, LangChain, ML, LLMs, and more.">
+    <meta property="og:image" content="https://img.freepik.com/vektoren-premium/portfolio-wort-mit-bleistift-statt-buchstabe-i-kunst-und-designgalerie-konzept-vektorkonzeptionelles-kreatives-logo-oder-poster-mit-spezieller-schriftart_570429-3743.jpg?w=2000">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="627">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Shashank Mankala | Data Scientist Portfolio">
+    <meta name="twitter:description" content="Explore Shashank's portfolio featuring AI/ML projects, LangChain apps, and real-world applications.">
+    <meta name="twitter:image" content="https://img.freepik.com/vektoren-premium/portfolio-wort-mit-bleistift-statt-buchstabe-i-kunst-und-designgalerie-konzept-vektorkonzeptionelles-kreatives-logo-oder-poster-mit-spezieller-schriftart_570429-3743.jpg?w=2000">
+
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="img/mylogo1.png">
-    <title>Shashank Mankala | Data Scientist</title>
+
+    <!-- Sitemap (optional but useful if created) -->
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Yuji+Boku&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Doodle+Shadow&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/712e31168a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+
+    <!-- Google AdSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9476714825436397"
         crossorigin="anonymous"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+
+    <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7YVFRYX6GS"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-
         gtag('config', 'G-7YVFRYX6GS');
     </script>
-    <script src="https://kit.fontawesome.com/712e31168a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
-        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@300&display=swap"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Yuji+Boku&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik+Doodle+Shadow&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -56,7 +72,7 @@
             <div class="leftpoletopdiv">
                 <div class="leftpoletopsec">
                     <div class="leftpoletopimg">
-                        <img src="img/mylogo1.png" alt="" onclick="location.href='#topp'" ;>
+                        <img src="img/mylogo1.png" alt="Shashank Mankala Logo" onclick="location.href='#topp'" ;>
                     </div>
                     <div class="hamburger" id="hamburger">
                         <i class="fas fa-bars"></i>
@@ -67,23 +83,23 @@
                 </div>
             </div>
             <div class="leftpoleshare">
-                <img src="img/sshare.png" alt="" id="sshareimg">
+                <img src="img/sshare.png" alt="Share" id="sshareimg">
                 <div class="sshareoptsdiv" id="sshareoptsdiv">
                     <div class="ssharebtn">
-                        <img src="img/close.png" alt="" id="sshareimgin">
+                        <img src="img/close.png" alt="Close" id="sshareimgin">
                     </div>
                     <div class="sshareopts">
                         <div class="sshareoptsicon">
-                            <img src="img/wht.png" alt="" id="sshareoptwht">
+                            <img src="img/wht.png" alt="Whatsapp" id="sshareoptwht">
                         </div>
                         <div class="sshareoptsicon">
-                            <img src="img/mail.png" alt="" id="sshareoptmail">
+                            <img src="img/mail.png" alt="Gmail" id="sshareoptmail">
                         </div>
                         <div class="sshareoptsicon">
-                            <img src="img/linkedin.png" alt="" id="sshareoptlink">
+                            <img src="img/linkedin.png" alt="LinkedIn" id="sshareoptlink">
                         </div>
                         <div class="sshareoptsicon">
-                            <img src="img/fb.png" alt="" id="sshareoptfb">
+                            <img src="img/fb.png" alt="Facebook" id="sshareoptfb">
                         </div>
                     </div>
                 </div>
@@ -745,7 +761,7 @@
                             <div class="pryear inthemeb" id="pryearn2">2022</div>
                             <div class="prsonoff" id="prsonoffn2">
                                 <div class="prgif" id="prgifn2">
-                                    <img src="img/easychat.webp" alt="" class="prgifgif" id="prgifgifn2">
+                                    <img src="img/easychat.webp" alt="Easy Chat Website" class="prgifgif" id="prgifgifn2">
                                 </div>
                                 <div class="prtitle inthemef" id="prtitlen2">
                                     <p id="prpn2">EasyChat Website</p>
@@ -790,7 +806,7 @@
                             <div class="pryear inthemeb" id="pryearn1">2022</div>
                             <div class="prsonoff" id="prsonoffn1">
                                 <div class="prgif" id="prgifn1">
-                                    <img src="img/p1.webp" alt="" class="prgifgif" id="prgifgifn1">
+                                    <img src="img/p1.webp" alt="Shashank Mankala Portfolio Website" class="prgifgif" id="prgifgifn1">
                                 </div>
                                 <div class="prtitle inthemef" id="prtitlen1">
                                     <p id="prpn1">Portfolio Website</p>
@@ -836,7 +852,7 @@
                             <div class="pryear inthemeb" id="pryearn0">2022</div>
                             <div class="prsonoff" id="prsonoffn0">
                                 <div class="prgif" id="prgifn0">
-                                    <img src="img/ps1.webp" alt="" class="prgifgif" id="prgifgifn0">
+                                    <img src="img/ps1.webp" alt="Play Store Analysis" class="prgifgif" id="prgifgifn0">
                                 </div>
                                 <div class="prtitle inthemef" id="prtitlen0">
                                     <p id="prpn0">Play Store Analysis</p>
@@ -880,7 +896,7 @@
                             <div class="pryear inthemeb" id="pryear1">2021</div>
                             <div class="prsonoff" id="prsonoff1">
                                 <div class="prgif" id="prgif1">
-                                    <img src="img/f1.png" alt="" class="prgifgif" id="prgifgif1">
+                                    <img src="img/f1.png" alt="Facebook Clone" class="prgifgif" id="prgifgif1">
                                 </div>
                                 <div class="prtitle inthemef" id="prtitle1">
                                     <p id="prp1">Facebook Clone</p>
@@ -921,7 +937,7 @@
                             <div class="pryear inthemeb" id="pryear2">2021</div>
                             <div class="prsonoff" id="prsonoff2">
                                 <div class="prgif" id="prgif2">
-                                    <img src="img/mp1.webp" alt="" class="prgifgif" id="prgifgif2">
+                                    <img src="img/mp1.webp" alt="Music Player" class="prgifgif" id="prgifgif2">
                                 </div>
                                 <div class="prtitle inthemef" id="prtitle2">
                                     <p id="prp2">Music Player</p>
@@ -966,7 +982,7 @@
                             <div class="pryear inthemeb" id="pryear3">2021</div>
                             <div class="prsonoff" id="prsonoff3">
                                 <div class="prgif" id="prgif3">
-                                    <img src="img/c1.png" alt="" class="prgifgif" id="prgifgif3">
+                                    <img src="img/c1.png" alt="Corona Live Update" class="prgifgif" id="prgifgif3">
                                 </div>
                                 <div class="prtitle inthemef" id="prtitle3">
                                     <p id="prp3">Corona Live Update</p>
@@ -1052,7 +1068,7 @@
                             <div class="pryear inthemeb" id="pryear5">2021</div>
                             <div class="prsonoff" id="prsonoff5">
                                 <div class="prgif" id="prgif5">
-                                    <img src="img/t1.webp" alt="" class="prgifgif" id="prgifgif5">
+                                    <img src="img/t1.webp" alt="Todo checklist" class="prgifgif" id="prgifgif5">
                                 </div>
                                 <div class="prtitle inthemef" id="prtitle5">
                                     <p id="prp5">Todo checklist</p>
@@ -1097,7 +1113,7 @@
                             <div class="pryear inthemeb" id="pryear6">2021</div>
                             <div class="prsonoff" id="prsonoff6">
                                 <div class="prgif" id="prgif6">
-                                    <img src="img/employeeManag.png" alt="" class="prgifgif" id="prgifgif6">
+                                    <img src="img/employeeManag.png" alt="Employee Recruitment System" class="prgifgif" id="prgifgif6">
                                 </div>
                                 <div class="prtitle inthemef" id="prtitle6">
                                     <p id="prp6">Employee Recruitment System</p>
@@ -1525,7 +1541,7 @@
                             </div>
                             <div class="skillname">
                                 <div class="skillimg">
-                                    <img src="img/aws.png" alt="GCP">
+                                    <img src="img/aws.png" alt="AWS">
                                 </div>
                                 <div class="skillnamename">
                                     <h2>AWS</h2>
@@ -1540,7 +1556,7 @@
                             </div>
                             <div class="skillname">
                                 <div class="skillimg">
-                                    <img src="img/snowflake.png" alt="GCP">
+                                    <img src="img/snowflake.png" alt="Snowflake">
                                 </div>
                                 <div class="skillnamename">
                                     <h2>Snowflake</h2>
@@ -1555,7 +1571,7 @@
                             </div>
                             <div class="skillname">
                                 <div class="skillimg">
-                                    <img src="img/databricks.png" alt="GCP">
+                                    <img src="img/databricks.png" alt="Databricks">
                                 </div>
                                 <div class="skillnamename">
                                     <h2>Databricks</h2>
@@ -1587,7 +1603,7 @@
                             <div class="expercardheadbody darkmodebg darkmodefont">
                                 <div class="expercardhead">
                                     <div class="expercardlogo" onclick="pageOpen('UB')">
-                                        <img src="img/ub.png" alt="Shadowfax">
+                                        <img src="img/ub.png" alt="University at Buffalo">
                                     </div>
                                     <div class="expercardtitle inthemef" onclick="pageOpen('UB')">
                                         <p> UNIVERSITY AT BUFFALO</p>
@@ -2061,35 +2077,6 @@
 
                             </div>
                         </div>
-
-                        <!-- <div class="darkmodebg hiremecontainer">
-                            <h4 class="darkmodefont hiremeheading"> 
-                                Hire Shashank
-                            </h4> 
-                            <hr style="width: 100%; margin-top: 10px; opacity: 50%;">
-                            <div class="darkmodebg hireopts">
-                                <div class="hireopticon">
-                                    <img src="img/full-time.png" alt="">
-                                </div>
-                                <div class="darkmodefont hireopttype">
-                                    Full Time Job
-                                </div>
-                                <div class="hireoptarrow">
-                                    <i class="fas fa-solid fa-angle-right"></i>
-                                </div>
-                            </div>
-                            <div class="darkmodebg hireopts">
-                                <div class="hireopticon">
-                                    <img src="img/part-time.png" alt="">
-                                </div>
-                                <div class="darkmodefont hireopttype">
-                                    Freelance/Project
-                                </div>
-                                <div class="hireoptarrow">
-                                    <i class="fas fa-solid fa-angle-right"></i>
-                                </div>
-                            </div>
-                        </div> -->
 
 
                     </div>
